--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="/CSS/all.min.css">
+  <link rel="stylesheet" href="./CSS/all.min.css">
   <!-- Normalize -->
-  <link rel="stylesheet" href="/CSS/normalize.css">
+  <link rel="stylesheet" href="./CSS/normalize.css">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;400,700;1,400&display=swap"
     rel="stylesheet">
   <!-- Main CSS -->
-  <link rel="stylesheet" href="/CSS/main.css">
+  <link rel="stylesheet" href="./CSS/main.css">
   <title>AKASI | Template_3</title>
 </head>
 
@@ -79,14 +79,14 @@
   </header>
 
   <article>
-    <img src="/IMG/stars1.png" id=stars>
+    <img src="./IMG/stars1.png" id=stars>
     <h1>We Are <span>Creative</span>Agency</h1>
-    <img src="/IMG/moon2.png" id="moon">
-    <img src="/IMG/mountains3.png" id="mountain1">
-    <img src="/IMG/mountains4.png" id="mountain2">
-    <img src="/IMG/river5.png" id="river">
-    <img src="/IMG/boat6.png" id="boat">
-    <img src="/IMG/mountains7.png" id="mountain3">
+    <img src="./IMG/moon2.png" id="moon">
+    <img src="./IMG/mountains3.png" id="mountain1">
+    <img src="./IMG/mountains4.png" id="mountain2">
+    <img src="./IMG/river5.png" id="river">
+    <img src="./IMG/boat6.png" id="boat">
+    <img src="./IMG/mountains7.png" id="mountain3">
   </article>
 
   <section class="about" id="about">
@@ -139,16 +139,16 @@
     <h1 class="title">My Gallery</h1>
     <div class="container">
       <div class="image">
-        <img src="/IMG/01.jpeg" alt=" Image One">
-        <img src="/IMG/02.jpeg" alt="Image Two">
-        <img src="/IMG/03.jpeg" alt="Image Three">
-        <img src="/IMG/04.jpeg" alt="Image Four">
-        <img src="/IMG/05.jpeg" alt="Image Five">
-        <img src="/IMG/06.png" alt="Image Six">
-        <img src="/IMG/07.jpeg" alt="Image Seven">
-        <img src="/IMG/08.jpeg" alt="Image Eight">
-        <img src="/IMG/09.jpeg" alt="Image Nine">
-        <img src="/IMG/10.jpeg" alt="Image Ten">
+        <img src="./IMG/01.jpeg" alt=" Image One">
+        <img src="./IMG/02.jpeg" alt="Image Two">
+        <img src="./IMG/03.jpeg" alt="Image Three">
+        <img src="./IMG/04.jpeg" alt="Image Four">
+        <img src="./IMG/05.jpeg" alt="Image Five">
+        <img src="./IMG/06.png" alt="Image Six">
+        <img src="./IMG/07.jpeg" alt="Image Seven">
+        <img src="./IMG/08.jpeg" alt="Image Eight">
+        <img src="./IMG/09.jpeg" alt="Image Nine">
+        <img src="./IMG/10.jpeg" alt="Image Ten">
       </div>
     </div>
   </section>
@@ -189,32 +189,32 @@
     <h1 class="title">Our Features</h1>
     <div class="container">
       <div class="box">
-        <img src="/IMG/programming.svg" alt="">
+        <img src="./IMG/programming.svg" alt="">
         <h2>Development</h2>
         <p>We are professional marketeers, we will do anything you imagine in no time.</p>
       </div>
       <div class="box">
-        <img src="/IMG/advertising.svg" alt="">
+        <img src="./IMG/advertising.svg" alt="">
         <h2>Marketing</h2>
         <p>We are professional marketeers, we will do anything you imagine in no time.</p>
       </div>
       <div class="box">
-        <img src="/IMG/hosting-icon.svg" alt="">
+        <img src="./IMG/hosting-icon.svg" alt="">
         <h2>Hosting</h2>
         <p>We are professional marketeers, we will do anything you imagine in no time.</p>
       </div>
       <div class="box">
-        <img src="/IMG/mobile-app.svg" alt="">
+        <img src="./IMG/mobile-app.svg" alt="">
         <h2>Mobile Development</h2>
         <p>We are professional marketeers, we will do anything you imagine in no time.</p>
       </div>
       <div class="box">
-        <img src="/IMG/graphic-design.svg" alt="">
+        <img src="./IMG/graphic-design.svg" alt="">
         <h2>Cloud and Servers</h2>
         <p>We are professional marketeers, we will do anything you imagine in no time.</p>
       </div>
       <div class="box">
-        <img src="/IMG/web-design.svg" alt="">
+        <img src="./IMG/web-design.svg" alt="">
         <h2>Seo</h2>
         <p>We are professional marketeers, we will do anything you imagine in no time.</p>
       </div>
@@ -225,7 +225,7 @@
     <h1 class="title">Testim<span>onials</span></h1>
     <div class="container">
       <div class="box">
-        <img src="/IMG/avatar-06.png" alt="">
+        <img src="./IMG/avatar-06.png" alt="">
         <h3>Ahmed Khaled</h3>
         <p>Full Stack Developer</p>
         <ul class="rate">
@@ -238,7 +238,7 @@
         <p>I'm very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
       </div>
       <div class="box">
-        <img src="/IMG/avatar-01.png" alt="">
+        <img src="./IMG/avatar-01.png" alt="">
         <h3>Sabrina Katoussi</h3>
         <p>Full Stack Developer</p>
         <ul class="rate">
@@ -251,7 +251,7 @@
         <p>I'm very happy with the product its amazing and i recieve it very fast and the price was amazing.</p>
       </div>
       <div class="box">
-        <img src="/IMG/avatar-05.png" alt="">
+        <img src="./IMG/avatar-05.png" alt="">
         <h3>Osama Mohamed</h3>
         <p>Backend Developer</p>
         <ul class="rate">
@@ -292,7 +292,7 @@
 
   <footer>Created By AKASI</footer>
 
-  <script src="/JS/main.js"></script>
+  <script src="./JS/main.js"></script>
 </body>
 
 </html>
